...
      child: ListView(
        padding: const EdgeInsets.all(AppSizes.pagePadding),
        children: [
          Semantics(
            header: true,
            child: const Text(
              'My medicines',
              style: TextStyle(
                fontSize: 32,
                fontWeight: FontWeight.w700,
                color: AppColors.text900,
              ),
            ),
...
